# spark

./: .gitignore  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  LICENSE  README.md  pyproject.toml  vcpkg.json
examples/boids/: CMakeLists.txt
examples/boids/include/boids/: Bird.h  BoidsManager.h  SimulationData.h
examples/boids/src/: Bird.cpp  BoidsManager.cpp  main.cpp
examples/brickbreaker/: CMakeLists.txt
examples/brickbreaker/assets/saves/: bba6f6f8-630a-4e98-bc54-5ef7da0d8b
examples/brickbreaker/include/brickbreaker/: Ball.h  Brick.h  BrickContainer.h  Paddle.h  SavesManager.h  ScreenBorder.h
examples/brickbreaker/src/: main.cpp
examples/pathfinding/: CMakeLists.txt
examples/pathfinding/include/pathfinding/: AStar.h  Cell.h  GameManager.h  Grid.h
examples/pathfinding/src/: AStar.cpp  Cell.cpp  GameManager.cpp  Grid.cpp  main.cpp
examples/pong/: CMakeLists.txt
examples/pong/include/pong/: Ball.h  GameManager.h  Paddle.h
examples/pong/include/pong/ui/: Background.h  Button.h  Menu.h
examples/pong/src/: main.cpp
experimental/ser/: CMakeLists.txt
experimental/ser/include/experimental/ser/: AbstractSerializer.h  BinarySerializer.h  FileSerializer.h  MemorySerializer.h  SerializationRegistry.h  SerializerScheme.h
experimental/ser/include/experimental/ser/details/: SerializerScheme.h
experimental/ser/src/: FileSerializer.cpp  MemorySerializer.cpp
spark/: CMakeLists.txt
spark/assets/: CMakeLists.txt
spark/assets/shaders/: 2d_frag.hlsl  2d_frag.spv  2d_vert.hlsl  2d_vert.spv  compile_commands.txt
spark/audio/: CMakeLists.txt
spark/audio/include/spark/audio/: Sound.h
spark/audio/src/: Sound.cpp
spark/base/: CMakeLists.txt
spark/base/include/spark/base/: BaseType.h  Endianness.h  Exception.h  KeyCodes.h  Macros.h  MouseCodes.h  Platforms.h
spark/base/include/spark/base/details/: Exception.h
spark/base/src/: ExportSymbols.cpp
spark/core/: CMakeLists.txt
spark/core/include/spark/core/: Application.h  ApplicationBuilder.h  Component.h  EntryPoint.h  GameObject.h  Input.h  Registries.h  Renderer2D.h  Scene.h  SceneManager.h  Window.h
spark/core/src/: Application.cpp  Component.cpp  GameObject.cpp  Input.cpp  Registries.cpp  Renderer2D.cpp  Scene.cpp  SceneManager.cpp  Window.cpp
spark/engine/: CMakeLists.txt
spark/engine/include/spark/engine/: Component.h  GameObject.h  Scene.h
spark/engine/src/: Component.cpp  GameObject.cpp  Scene.cpp
spark/events/: CMakeLists.txt
spark/events/include/spark/events/: Event.h  EventDispatcher.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
spark/events/src/: Event.cpp  EventDispatcher.cpp  KeyEvents.cpp  MouseEvents.cpp  WindowEvents.cpp
spark/imgui/: CMakeLists.txt
spark/imgui/include/spark/imgui/: ImGui.h
spark/imgui/src/: ImGui.cpp
spark/lib/: CMakeLists.txt
spark/lib/include/spark/lib/: Clock.h  Overloaded.h  Pointers.h  Random.h  String.h  Uuid.h  UuidGenerator.h
spark/lib/src/: Clock.cpp  Random.cpp  Uuid.cpp  UuidGenerator.cpp
spark/lib/tests/: CMakeLists.txt
spark/lib/tests/src/: PointersTests.cpp
spark/log/: CMakeLists.txt
spark/log/include/spark/log/: Level.h  Logger.h
spark/log/src/: Logger.cpp
spark/log/tests/: CMakeLists.txt
spark/log/tests/executor/: CMakeLists.txt
spark/log/tests/executor/src/: main.cpp
spark/log/tests/include/: ExecutorHelpers.h
spark/log/tests/src/: LoggerTests.cpp
spark/math/: CMakeLists.txt
spark/math/include/spark/math/: Constants.h  Rectangle.h  Vector2.h  Vector3.h  Vector4.h
spark/math/tests/: CMakeLists.txt
spark/math/tests/src/: RectangleTests.cpp  Vector2Tests.cpp  Vector3Tests.cpp  Vector4Tests.cpp
spark/mpl/: CMakeLists.txt
spark/mpl/include/spark/mpl/: index_list.h  type_seq.h  typelist.h
spark/mpl/tests/: CMakeLists.txt
spark/mpl/tests/src/: TypelistTests.cpp
spark/path/: CMakeLists.txt
spark/path/include/spark/path/: Paths.h
spark/path/src/: Paths.cpp
spark/path/tests/: CMakeLists.txt
spark/path/tests/src/: PathsTests.cpp  main.cpp
spark/patterns/: CMakeLists.txt
spark/patterns/include/spark/patterns/: Composite.h  Factory.h  Signal.h  Singleton.h  Slot.h  Traverser.h
spark/patterns/tests/: CMakeLists.txt
spark/patterns/tests/src/: CompositeTests.cpp  FactoryTests.cpp  SignalTests.cpp  SlotTests.cpp  TraverserTests.cpp
spark/render/: CMakeLists.txt
spark/render/include/spark/render/: Backend.h  Barrier.h  Buffer.h  CommandBuffer.h  CommandQueue.h  DepthStencilState.h  DescriptorBinding.h  DescriptorSet.h  DeviceMemory.h  DeviceState.h  Format.h  FrameBuffer.h  GraphicsAdapter.h  GraphicsDevice.h  GraphicsFactory.h  Image.h  IndexBuffer.h  InputAssembler.h  InputAttachementMapping.h  Mappable.h  Pipeline.h  PushConstantsLayout.h  PushConstantsRange.h  Rasterizer.h  RenderPass.h  RenderPipeilne.h  RenderTarget.h  Resource.h  Sampler.h  Scissor.h  Shader.h  ShaderStages.h  StateResource.h  Surface.h  SwapChain.h  VertexBuffer.h  Viewport.h
spark/render/src/: Buffer.cpp  DepthStencilState.cpp  DeviceState.cpp  ExportSymbols.cpp  Rasterizer.cpp  RenderTarget.cpp  Scissor.cpp  StateResource.cpp  Viewport.cpp
spark/render/vk/: CMakeLists.txt
spark/render/vk/src/: VulkanBackend.cpp  VulkanBarrier.cpp  VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanDescriptorLayout.cpp  VulkanDescriptorSet.cpp  VulkanDescriptorSetLayout.cpp  VulkanDevice.cpp  VulkanFactory.cpp  VulkanFrameBuffer.cpp  VulkanGraphicsAdapter.cpp  VulkanImage.cpp  VulkanIndexBuffer.cpp  VulkanIndexBufferLayout.cpp  VulkanInputAssembler.cpp  VulkanInputAttachmentMapping.cpp  VulkanPipeline.cpp  VulkanPipelineLayout.cpp  VulkanPushConstantsLayout.cpp  VulkanPushConstantsRange.cpp  VulkanQueue.cpp  VulkanRasterizer.cpp  VulkanRenderPass.cpp  VulkanRenderPipeline.cpp  VulkanSampler.cpp  VulkanShaderModule.cpp  VulkanShaderProgram.cpp  VulkanSurface.cpp  VulkanSwapChain.cpp  VulkanVertexBuffer.cpp  VulkanVertexBufferLayout.cpp
spark/rtti/: CMakeLists.txt
spark/rtti/include/spark/rtti/: HasRtti.h  Rtti.h  RttiBase.h  RttiDatabase.h
spark/rtti/src/: ExportSymbols.cpp  RttiBase.cpp  RttiDatabase.cpp
(+117 files in other folders)
