add_subdirectory(audio)
add_subdirectory(base)
add_subdirectory(core)
add_subdirectory(engine)
add_subdirectory(events)
add_subdirectory(lib)
add_subdirectory(log)
add_subdirectory(math)
add_subdirectory(mpl)
add_subdirectory(path)
add_subdirectory(patterns)
add_subdirectory(render)
add_subdirectory(rtti)
